crates/core/tests/snapshots/setting_default_test__setting_default__unnamed_struct__handles_layers.snap
---
source: crates/core/tests/setting_default_test.rs
expression: pretty(container.impl_partial_default_values())
---
fn default_values(
    context: &Self::Context,
) -> std::result::Result<Option<Self>, schematic::ConfigError> {
    Ok(
        Some(
            Self(
                Some(Default::default()),
                Some(Default::default()),
                None,
                Some(Vec::default()),
                Some(10),
                Some(10),
                Some(Default::default()),
            ),
        ),
    )
}
