crates/core/tests/snapshots/setting_default_test__setting_default__unnamed_struct__supports_types.snap
---
source: crates/core/tests/setting_default_test.rs
expression: pretty(container.impl_partial_default_values())
---
fn default_values(
    context: &Self::Context,
) -> std::result::Result<Option<Self>, schematic::ConfigError> {
    use schematic::internal::*;
    Ok(
        Some(
            Self(
                Some(Default::default()),
                Some(true),
                Some(100),
                Some(handle_default_result(String::try_from("abc"))?),
                Some(["a".into(), "b".into(), "c".into()]),
                Some(vec!["a", "b", "c"]),
                Some((10, -10, 0)),
            ),
        ),
    )
}
